--- a/docRefs.bib
+++ b/docRefs.bib
@@ -3,14 +3,12 @@
 	title = {Triangulations, orientals, and skew monoidal categories},
 	volume = {258},
 	issn = {0001-8708},
-	url = {https://dx.doi.org/10.1016/j.aim.2014.03.003},
 	doi = {10.1016/j.aim.2014.03.003},
 	pages = {351--396},
-	journal = {Advances in Mathematics},
-	author = {Lack, Stephen and Street, Ross},
+	journal = {Adv. Math.},
+	author = {Lack, S. and Street, R.},
 	year = {2014},
-	publisher = {Elsevier},
-	file = {Lack-2014-Triangulations-orientals-and-skew-m:/Users/wanchengsyuan/Zotero/storage/GD629YAN/Lack-2014-Triangulations-orientals-and-skew-m.pdf:application/pdf}
+	publisher = {Elsevier}
 }
 
 @article{uustalu:sequent:2018,
@@ -29,11 +27,13 @@
 
 @incollection{uustalu:sequent:2021,
   title={The sequent calculus of skew monoidal categories},
-  author={Uustalu, Tarmo and Veltri, Niccolo and Zeilberger, Noam},
-  booktitle={Joachim Lambek: The Interplay of Mathematics, Logic, and Linguistics},
+  author={Uustalu, T. and Veltri, N. and Zeilberger, N.},
+  editor={Scott, P. and Casadio, C.},
+  booktitle={Joachim Lambek: The Interplay of Mathematics, Logic, and Linguistics. Outstanding Contributions to Logic},
+  volume={20},
   pages={377--406},
   year={2021},
-  doi = {https://doi.org/10.1007/978-3-030-66545-6_11},
+  doi = {10.1007/978-3-030-66545-6_11},
   publisher={Springer}
 }
 
@@ -41,12 +41,11 @@
 	title = {Skew-monoidal categories and bialgebroids},
 	volume = {231},
 	issn = {0001-8708},
-  journal = {Advances in Mathematics},
-	url = {https://dx.doi.org/10.1016/j.aim.2012.06.027},
+  journal = {Adv. Math.},
 	doi = {10.1016/j.aim.2012.06.027},
 	pages = {1694--1730},
-	number = {3-4},
-	author = {Szlachányi, Kornél},
+	number = {3--4},
+	author = {Szlach\'anyi, K.},
 	year = {2012},
 	publisher = {Elsevier},
 	file = {Szlachanyi-2012-Skew-monoidal-categories-and-bialge:/Users/wanchengsyuan/Zotero/storage/XJ9UHVH9/Szlachanyi-2012-Skew-monoidal-categories-and-bialge.pdf:application/pdf}
@@ -108,15 +107,15 @@
 }
 
 @article{altenkirch:monads:2014,
-  author    = {Thorsten Altenkirch and
-               James Chapman and
-               Tarmo Uustalu},
+  author    = {T. Altenkirch and
+               J. Chapman and
+               T. Uustalu},
   title     = {Monads need not be endofunctors},
-  journal   = {Logical Methods in Computer Science},
+  journal   = {Log. Methods Comput. Sci.},
   volume    = {11},
   number    = {1},
+  article   = {3},
   year      = {2015},
-  url       = {https://doi.org/10.2168/LMCS-11(1:3)2015},
   doi       = {10.2168/LMCS-11(1:3)2015}
 }
 
@@ -138,16 +137,15 @@
 }
 
 @article{uustalu:eilenberg-kelly:2020,
-	title = {Eilenberg-Kelly Reloaded},
+	title = {Eilenberg-Kelly reloaded},
 	volume = {352},
 	issn = {1571-0661},
-	url = {https://doi.org/10.1016/j.entcs.2020.09.012},
 	doi = {10.1016/j.entcs.2020.09.012},
 	series = {The 36th Mathematical Foundations of Programming Semantics Conference, 2020},
 	abstract = {The Eilenberg-Kelly theorem states that a category C with an object I and two functors ⊗:C×C→C and ⊸:Cop×C→C related by an adjunction −⊗B⊣B⊸− natural in B is monoidal iff it is closed and moreover the adjunction holds internally. We dissect the proof of this theorem and observe that the necessity for a side condition on closedness arises because the standard definition of closed category is left-skew in regards to associativity. We analyze Street's observation that left-skew monoidality is equivalent to left-skew closedness and establish that monoidality is equivalent to closedness unconditionally under an adjusted definition of closedness that requires normal associativity. We also work out a definition of right-skew closedness equivalent to right-skew monoidality. We give examples of each type of structure; in particular, we look at the Kleisli category of a left-strong monad on a left-skew closed category and the Kleisli category of a lax closed monad on a right-skew closed category. We also view skew and normal monoidal and closed categories as special cases of skew and normal promonoidal categories and take a brief look at left-skew prounital-closed categories.},
 	pages = {233--256},
-	journal = {Electronic Notes in Theoretical Computer Science},
-	author = {Uustalu, Tarmo and Veltri, Niccol{\`o} and Zeilberger, Noam},
+	journal = {Electron. Notes Theor. Comput. Sci.},
+	author = {Uustalu, T. and Veltri, N. and Zeilberger, N.},
 	urldate = {2020-12-24},
 	year = {2020},
 	publisher={Elsevier},
@@ -155,41 +153,49 @@
 	file = {Uustalu et al. - 2020 - Eilenberg-Kelly Reloaded.pdf:/Users/wanchengsyuan/Zotero/storage/AKHMNT6B/Uustalu et al. - 2020 - Eilenberg-Kelly Reloaded.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/F5R3KS9T/S1571066120300633.html:text/html}
 }
 
-@article{uustalu:deductive:nodate,
-	title = {Deductive Systems and Coherence for Skew Prounital Closed Categories},
-	volume = {332},
-	url = {https://arxiv.org/pdf/2101.03809v1.pdf},
-	pages = {35--53},
-	journal = {Electronic Notes in Theoretical Computer Science},
-	author = {Uustalu, Tarmo and Veltri, Niccol{\`o} and Zeilberger, Noam},
-	urldate = {2020-12-24},
-  year = {2020},
-	file = {Uustalu et al. - Deductive Systems and Coherence for Skew Prounital.pdf:/Users/wanchengsyuan/Zotero/storage/X5E9XJD8/Uustalu et al. - Deductive Systems and Coherence for Skew Prounital.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/9KYPPGSQ/paper.html:text/html}
+@inproceedings{uustalu:deductive:nodate,
+  author    = {T. Uustalu and
+               N. Veltri and
+               N. Zeilberger},
+  editor    = {C. Sacerdoti Coen and
+               A. Tiu},
+  title     = {Deductive systems and coherence for skew prounital closed categories},
+  booktitle = {Proc. of 15th Wksh. on Logical Frameworks and Meta-Languages:
+               Theory and Practice, {LFMTP} 2020},
+  series    = {Electron. Proc. in Theor. Comput. Sci.},
+  volume    = {332},
+  pages     = {35--53},
+  year      = {2020},
+  doi       = {10.4204/EPTCS.332.3}
 }
 
-@article{uustalu:proof:nodate,
-	title = {Proof Theory of Partially Normal Skew Monoidal Categories},
-	volume = {333},
-	url = {http://dx.doi.org/10.4204/EPTCS.333.16},
-	pages = {230--246},
-	journal = {Electronic Notes in Theoretical Computer Science},
-	author = {Uustalu, Tarmo and Veltri, Niccol{\`o} and Zeilberger, Noam},
-	urldate = {2020-12-24},
-  year = {2020},
-	file = {Uustalu et al. - Proof Theory of Partially Normal Skew Monoidal Cat.pdf:/Users/wanchengsyuan/Zotero/storage/BC4BL4NP/Uustalu et al. - Proof Theory of Partially Normal Skew Monoidal Cat.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/UVW2FYNM/paper.html:text/html}
-}
-
+@inproceedings{uustalu:proof:nodate,
+  author    = {T. Uustalu and
+               N. Veltri and
+               N. Zeilberger},
+  editor    = {D. I. Spivak and
+               J. Vicary},
+  title     = {Proof theory of partially normal skew monoidal categories},
+  booktitle = {Proc. of 3rd Ann. Int. Applied Category Theory
+               Conf. 2020, {ACT} 2020},
+  series    = {Electron. Proc. in Theor. Comput. Sci.},
+  volume    = {333},
+  pages     = {230--246},
+  year      = {2020},
+  doi       = {10.4204/EPTCS.333.16}
+  }
+  
 @inproceedings{eilenberg:closed:1966,
 	location = {Berlin, Heidelberg},
-	title = {Closed Categories},
+	title = {Closed categories},
 	isbn = {978-3-642-99902-4},
 	doi = {10.1007/978-3-642-99902-4_22},
 	abstract = {In the usual theory of categories, with any two objects A, B of a category A there is associated a set A (A B) of morphisms of A into B. Frequently the set A (A B) is endowed with an additional structure such as a privileged element or an abelian group structure. It has become clear that as the ramifications of the theory of categories increase, the structures that A (A B) will carry will be richer and more complex. The need for a general theory has been widely felt for some time, and beginnings have been made in various directions and often under restrictive hypotheses; e.g. by Mac Lane [15], Kelly [10], Bénabou [3], Linton [12]},
 	pages = {421--562},
-	booktitle = {Proceedings of the Conference on Categorical Algebra},
+	booktitle = {Proc. of the Conf. on Categorical Algebra (La Jolla, 1965)},
 	publisher = {Springer},
-	author = {Eilenberg, Samuel and Kelly, G. Max},
-	editor = {Eilenberg, S. and Harrison, D. K. and {MacLane}, S. and Röhrl, H.},
+	author = {Eilenberg, S. and Kelly, G. M.},
+	editor = {Eilenberg, S. and Harrison, D. K. and {MacLane}, S. and R\"ohrl, H.},
 	year = {1966},
 	langid = {english},
 	keywords = {Monoidal Category, Monoidal Structure, Follow Diagram Commute, Natural Isomorphism, Natural Transformation},
@@ -439,13 +445,12 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	title = {Skew-closed categories},
 	volume = {217},
 	issn = {0022-4049},
-	url = {https://www.sciencedirect.com/science/article/pii/S0022404912002964},
 	doi = {10.1016/j.jpaa.2012.09.020},
 	abstract = {Spurred by the new examples found by Kornel Szlachányi of a form of lax monoidal category, the author felt the time ripe to publish a reworking of Eilenberg and Kelly’s original paper on closed categories appropriate to the laxer context. The new examples are connected with bialgebroids. In a separate paper with Stephen Lack, we have also used the concept to give an alternative definition of quantum category and quantum groupoid. Szlachányi has called the lax notion skew monoidal. This paper defines skew-closed category, proves Yoneda lemmas for categories enriched over such, and looks at closed cocompletion.},
 	pages = {973--988},
 	number = {6},
-	journal = {Journal of Pure and Applied Algebra},
-	author = {Street, Ross},
+	journal = {J. Pure Appl. Alg.},
+	author = {Street, R.},
 	urldate = {2021-03-18},
 	year = {2013},
 	langid = {english},
@@ -728,17 +733,17 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Submitted Version:/Users/wanchengsyuan/Zotero/storage/865FL8Y9/de Paiva - 2014 - Categorical Semantics of Linear Logic for All.pdf:application/pdf}
 }
 
-@article{hasegawa:linear:2017,
-	title = {Linear Exponential Comonads without Symmetry},
-	volume = {238},
-	issn = {2075-2180},
-	url = {https://dx.doi.org/10.4204/eptcs.238.6},
-	doi = {10.4204/eptcs.238.6},
-	pages = {54--63},
-	journaltitle = {Electronic Proceedings in Theoretical Computer Science},
-	author = {Hasegawa, Masahito},
-	date = {2017},
-	note = {Publisher: Open Publishing Association}
+@inproceedings{hasegawa:linear:2017,
+  author    = {M. Hasegawa},
+  editor    = {I. Cervesato and
+               M. Fern{\'{a}}ndez},
+  title     = {Linear exponential comonads without symmetry},
+  booktitle = {Proc. of 4th Int. Wksh. on Linearity, {LINEARITY} 2016},
+  series    = {Electron. Proc. in Theor. Comput. Sci.},
+  volume    = {238},
+  pages     = {54--63},
+  year      = {2016},
+  doi       = {10.4204/EPTCS.238.6}
 }
 
 @inproceedings{benton:mixed:1995,
@@ -881,16 +886,16 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 }
 
 @article{andreoli:logic:1992,
-	title = {Logic Programming with Focusing Proofs in Linear Logic},
+	title = {Logic programming with focusing proofs in linear logic},
 	volume = {2},
 	issn = {0955-792X},
-	url = {https://doi.org/10.1093/logcom/2.3.297},
 	doi = {10.1093/logcom/2.3.297},
 	abstract = {The deep symmetry of linear logic [18] makes it suitable for providing abstract models of computation, free from implementation details which are, by nature, oriented and non-symmetrical. I propose here one such model, in the area of logic programming, where the basic computational priciple {isComputation} = Proof {searchProofs} cinsidered here are those of the Gentzen style sequent calculus for linear logic. However, proofs in this system may be redundant, in that two proofs canbe syntactically different although identical up to some irrelevant reordering or simplification of the applications of the inferences rules. This leads to an untractable proof search where the search procedure is forced to make costly choices whch turn out to be irrelevant. To overcome this problem, a subclass of proofs, called the ‘focusing’ proofs, which is both complete (any derivable formla in linear logic has a focusing proof) and tractable (many irrelevant choices in the search are eliminated when aimed at focusing proofs) is identified. The main constraint underlying the specificatuon of focusing proofs has been to preserve the symmetry of linear logic, which is its most salient feature. In particular, dual connectives have dual properties with respect to focusing {proofsThen}, a progrmming language, called {LinLog}, consisting of a fragment of linear logic, in which focussing proofs have a more compact form, is presented. Linlog deals with formulae which have a syntax similar to the of the definite clauses and goals of Horn logic, but the crucial difference here is that it allows clauses with multiple atoms in the head, connected by the ‘par’ (multiplicative disjuction). It is then shown that the syntyactic restriction induced by {LinLog} is not performed at the cost of any expressive power: a mapping from full linear logic to {LinLog}, preserving focusing proofs, and analogous to the normalization to clausal form for classical logic, is presented.},
 	pages = {297--347},
 	number = {3},
-	journal = {Journal of Logic and Computation},
-	author = {Andreoli, Jean-Mark},
+	issue = {2},
+	journal = {J. of Log. and Comput.},
+	author = {Andreoli, J.-M.},
 	urldate = {2021-08-23},
 	year = {1992},
 	file = {Snapshot:/Users/wanchengsyuan/Zotero/storage/LGTCIBYK/1012743.html:text/html;ANDREOLI - 1992 - Logic Programming with Focusing Proofs in Linear L.pdf:/Users/wanchengsyuan/Zotero/storage/KY9UC2C7/ANDREOLI - 1992 - Logic Programming with Focusing Proofs in Linear L.pdf:application/pdf}
@@ -915,13 +920,12 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	title = {Skew structures in 2-category theory and homotopy theory},
 	volume = {12},
 	issn = {1512-2891},
-	url = {https://doi.org/10.1007/s40062-015-0121-z},
 	doi = {10.1007/s40062-015-0121-z},
 	abstract = {We study Quillen model categories equipped with a monoidal skew closed structure that descends to a genuine monoidal closed structure on the homotopy category. Our examples are 2-categorical and include permutative categories and bicategories. Using the skew framework, we adapt Eilenberg and Kelly’s theorem relating monoidal and closed structure to the homotopical setting. This is applied to the construction of monoidal bicategories arising from the pseudo-commutative 2-monads of Hyland and Power.},
 	pages = {31--81},
 	number = {1},
-	journal = {Journal of Homotopy and Related Structures},
-	author = {Bourke, John},
+	journal = {J. Homotopy Relat. Struct.},
+	author = {Bourke, J.},
 	urldate = {2021-09-28},
 	year = {2017},
 	langid = {english},
@@ -930,16 +934,17 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 
 @inproceedings{veltri:coherence:2021,
 	location = {Cham},
-	title = {Coherence via Focusing for Symmetric Skew Monoidal Categories},
+	title = {Coherence via focusing for symmetric skew monoidal categories},
 	isbn = {978-3-030-88853-4},
 	doi = {10.1007/978-3-030-88853-4_12},
-	series = {Lecture Notes in Computer Science},
+	series = {Lect. Notes in Comput. Sci.},
 	abstract = {The symmetric skew monoidal categories of Bourke and Lack are a weakening of Mac Lane’s symmetric monoidal categories where: (i) the three structural laws of left and right unitality and associativity are not required to be invertible, they are merely natural transformations with a specific orientation; (ii) the structural law of symmetry is a natural isomorphism involving three objects rather than two. In this paper we study the structural proof theory of symmetric skew monoidal categories, progressing the project initiated by Uustalu et al. on deductive systems for categories with skew structure. We discuss three equivalent presentations of the free symmetric skew monoidal category on a set of generating objects: a Hilbert-style categorical calculus; a cut-free sequent calculus; a focused subsystem of derivations, corresponding to a sound and complete goal-directed proof search strategy for the cut-free sequent calculus. Focusing defines an effective normalization procedure for maps in the free symmetric skew monoidal category, as such solving the coherence problem for symmetric skew monoidal categories.},
 	pages = {184--200},
 	booktitle = {Logic, Language, Information, and Computation},
 	publisher = {Springer International Publishing},
-	author = {Veltri, Niccol{\`o}},
-	editor = {Silva, Alexandra and Wassermann, Renata and de Queiroz, Ruy},
+	author = {Veltri, N.},
+	editor = {Silva, A. and Wassermann, R. and de Queiroz, R.},
+	volume = {13028},
 	year = {2021},
 	langid = {english},
 	keywords = {Agda, Coherence, Focused sequent calculus, Substructural logic, Symmetric skew monoidal categories},
@@ -956,7 +961,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	pages = {3255--3281},
 	number = {10},
 	journaltitle = {Journal of Pure and Applied Algebra},
-	author = {Bourke, John and Lack, Stephen},
+	author = {Bourke, J. and Lack, S.},
 	urldate = {2021-10-25},
 	date = {2018-10-01},
 	langid = {english},
@@ -967,12 +972,11 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	title = {Skew monoidal categories and skew multicategories},
 	volume = {506},
 	issn = {0021-8693},
-	url = {https://www.sciencedirect.com/science/article/pii/S0021869318301996},
 	doi = {10.1016/j.jalgebra.2018.02.039},
 	abstract = {We describe a perfect correspondence between skew monoidal categories and certain generalised multicategories, called skew multicategories, that arise in nature.},
 	pages = {237--266},
-	journal = {Journal of Algebra},
-	author = {Bourke, John and Lack, Stephen},
+	journal = {J. Alg.},
+	author = {Bourke, J. and Lack, S.},
 	urldate = {2021-10-25},
 	year = {2018},
 	langid = {english},
@@ -988,23 +992,22 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	abstract = {The Catalan numbers are well known to be the answer to many different counting problems, and so there are many different families of sets whose cardinalities are the Catalan numbers. We show how such a family can be given the structure of a simplicial set. We show how the low-dimensional parts of this simplicial set classify, in a precise sense, the structures of monoid and of monoidal category. This involves aspects of combinatorics, algebraic topology, quantum groups, logic, and category theory.},
 	pages = {211--222},
 	number = {2},
-	journal = {Mathematical Proceedings of the Cambridge Philosophical Society},
-	author = {Buckley, Mitchell and Garner, Richard and Lack, Stephen and Street, Ross},
+	journal = {Math. Proc. Cambridge Philos. Soc.},
+	author = {Buckley, M. and Garner, R. and Lack, S. and Street, R.},
 	urldate = {2021-10-25},
 	year = {2015},
 	langid = {english},
-	note = {Publisher: Cambridge University Press},
 	file = {Full Text PDF:/Users/wanchengsyuan/Zotero/storage/C5M6B5AB/Buckley et al. - 2015 - The Catalan simplicial set.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/CRUM2ANY/7340716969F921F6A98AF871525F12AB.html:text/html}
 }
 
 @article{lack:skew:2012,
 	title = {Skew monoidales, skew warpings and quantum categories},
 	volume = {26},
-	url = {http://arxiv.org/abs/1205.0074},
 	abstract = {Kornel Szlach{\textbackslash}'anyi recently used the term skew-monoidal category for a particular laxified version of monoidal category. He showed that bialgebroids \$H\$ with base ring \$R\$ could be characterized in terms of skew-monoidal structures on the category of one-sided \$R\$-modules for which the lax unit was \$R\$ itself. We define skew monoidales (or skew pseudo-monoids) in any monoidal bicategory \${\textbackslash}mathscr M\$. These are skew-monoidal categories when \${\textbackslash}mathscr M\$ is \${\textbackslash}mathrm\{Cat\}\$. Our main results are presented at the level of monoidal bicategories. However, a consequence is that quantum categories in the sense of Day-Street with base comonoid \$C\$ in a suitably complete braided monoidal category \${\textbackslash}mathscr V\$ are precisely skew monoidales in \${\textbackslash}mathrm\{Comod\} ({\textbackslash}mathscr V)\$ with unit coming from the counit of \$C\$. Quantum groupoids are those skew monoidales with invertible associativity constraint. In fact, we provide some very general results connecting opmonoidal monads and skew monoidales. We use a lax version of the concept of warping defined recently by Booker-Street to modify monoidal structures.},
 	pages = {385--402},
-	journal = {Theory and Applications of Categories},
-	author = {Lack, Stephen and Street, Ross},
+	url = {http://www.tac.mta.ca/tac/volumes/26/15/26-15abs.html},
+	journal = {Theor. Appl. Categ.},
+	author = {Lack, S. and Street, R.},
 	urldate = {2021-10-25},
 	year = {2012},
 	keywords = {Mathematics - Category Theory, Mathematics - Quantum Algebra},
@@ -1024,48 +1027,44 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 }
 
 @article{zeilberger:semiassociative:19,
-  author    = {Noam Zeilberger},
+  author    = {N. Zeilberger},
   title     = {A sequent calculus for a semi-associative law},
-  journal   = {Logical Methods in Computer Science},
+  journal   = {Log. Methods Comput. Sci.},
   volume    = {15},
   number    = {1},
   year      = {2019},
-  url       = {https://doi.org/10.23638/LMCS-15(1:9)2019},
   doi       = {10.23638/LMCS-15(1:9)2019}
 }
 
 @article{girard:constructive:91,
-  author    = {Jean{-}Yves Girard},
-  title     = {A New Constructive Logic: Classical Logic},
-  journal   = {Mathematical structures in computer science},
+  author    = {J.{-}Y. Girard},
+  title     = {A new constructive logic: classical logic},
+  journal   = {Math. Struct. in Comput. Sci.},
   volume    = {1},
   number    = {3},
   pages     = {255--296},
   year      = {1991},
-  url       = {https://doi.org/10.1017/S0960129500001328},
   doi       = {10.1017/S0960129500001328}
 }
 
 @inproceedings{tomita:realizability:21,
-  author    = {Haruka Tomita},
-  editor    = {Christel Baier and
-               Jean Goubault{-}Larrecq},
-  title     = {Realizability Without Symmetry},
-  booktitle = {29th {EACSL} Annual Conference on Computer Science Logic, {CSL} 2021,
-               January 25-28, 2021, Ljubljana, Slovenia (Virtual Conference)},
-  series    = {LIPIcs},
+  author    = {H. Tomita},
+  editor    = {C. Baier and
+               J. Goubault{-}Larrecq},
+  title     = {Realizability without symmetry},
+  booktitle = {Proc. of 29th {EACSL} Ann. Conf. on Computer Science Logic, {CSL} 2021},
+  series    = {Leibniz Int.\ Proc.\ in Inform.},
   volume    = {183},
   pages     = {38:1--38:16},
-  publisher = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  publisher = {Dagstuhl Publishing},
   year      = {2021},
-  url       = {https://doi.org/10.4230/LIPIcs.CSL.2021.38},
   doi       = {10.4230/LIPIcs.CSL.2021.38}
 }
 
 
 @article{mellies:categorical:09,
   title={Categorical semantics of linear logic},
-  author={Mellies, Paul-Andr{\'e}},
+  author={Mellies, P.-A.},
   journal={Panoramas et syntheses},
   volume={27},
   pages={15--215},
@@ -1074,84 +1073,79 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 }
 
 @article{lambek:deductive:68,
-  author    = {Joachim Lambek},
-  title     = {Deductive Systems and Categories I. Syntactic Calculus and Residuated
-               Categories},
+  author    = {J. Lambek},
+  title     = {Deductive systems and categories I. Syntactic calculus and residuated
+               categories},
   journal   = {Math. Syst. Theory},
   volume    = {2},
   number    = {4},
   pages     = {287--318},
   year      = {1968},
-  url       = {https://doi.org/10.1007/BF01703261},
   doi       = {10.1007/BF01703261}
 }
 
 @article{lambek:mathematics:58,
   title={The mathematics of sentence structure},
-  author={Lambek, Joachim},
-  journal={The American Mathematical Monthly},
+  author={Lambek, J.},
+  journal={Amer. Math. Monthly},
   volume={65},
   number={3},
   pages={154--170},
   year={1958},
+  doi={10.2307/2310058},
   publisher={Taylor \& Francis}
 }
 @article{maclane1963natural,
   title={Natural associativity and commutativity},
-  author={MacLane, Saunders},
-  journal={Rice Institute Pamphlet-Rice University Studies},
+  author={Mac Lane, S.},
+  journal={Rice Univ. Stud.},
   volume={49},
   number={4},
   year={1963},
-  url={https://scholarship.rice.edu/handle/1911/62865},
+  peges={28--46},
+  url={http://hdl.handle.net/1911/62865},
   publisher={Rice University}
 }
 
 @article{abrusci:noncommutative:1990,
   author    = {V. M. Abrusci},
   title     = {Non-commutative intuitionistic linear logic},
-  journal   = {Math. Log. Q.},
+  journal   = {Math. Log. Quart.},
   volume    = {36},
   number    = {4},
   pages     = {297--318},
   year      = {1990},
-  url       = {https://doi.org/10.1002/malq.19900360405},
   doi       = {10.1002/malq.19900360405}
 }
 
 @inproceedings{chaudhuri:canonical:2008,
-  author    = {Kaustuv Chaudhuri and
-               Dale Miller and
-               Alexis Saurin},
-  editor    = {Giorgio Ausiello and
-               Juhani Karhum{\"{a}}ki and
-               Giancarlo Mauri and
-               C.{-}H. Luke Ong},
-  title     = {Canonical Sequent Proofs via Multi-Focusing},
-  booktitle = {Fifth {IFIP} International Conference On Theoretical Computer Science
-               - {TCS} 2008, {IFIP} 20th World Computer Congress, {TC} 1, Foundations
-               of Computer Science, September 7-10, 2008, Milano, Italy},
+  author    = {K. Chaudhuri and
+               D. Miller and
+               A. Saurin},
+  editor    = {G. Ausiello and
+               J. Karhum{\"{a}}ki and
+               G. Mauri and
+               L. Ong},
+  title     = {Canonical sequent proofs via multi-focusing},
+  booktitle = {Proc. of 5th Int. Conf. On Theoretical Computer Science, {TCS} 2008},
   series    = {{IFIP}},
   volume    = {273},
   pages     = {383--396},
   publisher = {Springer},
   year      = {2008},
-  url       = {https://doi.org/10.1007/978-0-387-09680-3\_26},
   doi       = {10.1007/978-0-387-09680-3\_26}
 }
 
 @inproceedings{scherer:simple:2015,
-  author    = {Gabriel Scherer and
-               Didier R{\'{e}}my},
-  editor    = {Kathleen Fisher and
-               John H. Reppy},
+  author    = {G. Scherer and
+               D. R{\'{e}}my},
+  editor    = {K. Fisher and
+               J. H. Reppy},
   title     = {Which simple types have a unique inhabitant?},
-  booktitle = {Proceedings of the 20th {ACM} {SIGPLAN} International Conference on
-               Functional Programming, {ICFP} 2015, Vancouver, BC, Canada, September
-               1-3, 2015},
+  booktitle = {Proc. of 20th {ACM} {SIGPLAN} Int. Conf. on
+               Functional Programming, {ICFP} 2015},
   pages     = {243--255},
   publisher = {{ACM}},
   year      = {2015},
-  url       = {https://doi.org/10.1145/2784731.2784757},
   doi       = {10.1145/2784731.2784757}
 }
