--- a/SMCC-draft.tex
+++ b/SMCC-draft.tex
@@ -1341,7 +1341,7 @@ The employment of a system of tags in focused proofs, for taming the non-determi
 This paper represents the latest installment of a large project aiming at the development of the proof theory of categories with skew structure. So far the project, promoted and advanced by Uustalu, Veltri and Zeilberger, has investigated proof systems for skew semigroup categories \cite{zeilberger:semiassociative:19}, (symmetric and non-symmetric) skew monoidal categories \cite{uustalu:sequent:2021,uustalu:proof:nodate,veltri:coherence:2021} and skew prounital closed categories \cite{uustalu:deductive:nodate}. From a purely proof-theoretic perspective, the main incentive gained from the study of these skew systems is a \emph{modular} understanding of Andreoli's focusing technique. This is particularly highlighted in Uustalu et al.'s study of \emph{partially normal} skew monoidal categories \cite{uustalu:proof:nodate}, where one or more structural laws among $\lambda$, $\rho$ and $\alpha$ can be invertible. The focused sequent calculus of partially normal skew monoidal categories is obtained from the focused sequent calculus of skew monoidal categories by modularly adding new rules for each enforced normality condition.
 We expect a similar modular behaviour to show up in the case of partially normal skew monoidal closed categories.
 
-We are also planning to develop an extension of \SkNMILL\ with an exponential modality !. This in turns requires the study of linear exponential comonads on skew monoidal closed categories. To this aim, we should take inspiration from Hasegawa's work on linear exponential comonads without symmetry \cite{hasegawa:linear:2017}. 
+We are also planning to develop an extension of \SkNMILL\ with an exponential modality !. This in turns requires the study of linear exponential comonads on skew monoidal closed categories, extending the work of Hasegawa \cite{hasegawa:linear:2017}. Modalities for exchange \cite{jiang:lambek:2019} and associativity/unitality will also be considered.
 
   \bibliographystyle{eptcs}
   \bibliography{docRefs}
