--- a/docRefs.bib
+++ b/docRefs.bib
@@ -771,25 +771,24 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {J. Jiang - On the Lambek Calculus with an Exchange Modality:/Users/wanchengsyuan/Zotero/storage/AXTIQ8RL/viewer.html:text/html}
 }
 
-@article{jiang:lambek:2019,
-	title = {On the Lambek Calculus with an Exchange Modality},
-	volume = {292},
-	issn = {2075-2180},
-	url = {http://arxiv.org/abs/1904.06847},
-	doi = {10.4204/EPTCS.292.4},
-	abstract = {In this paper we introduce Commutative/Non-Commutative Logic ({CNC} logic) and two categorical models for {CNC} logic. This work abstracts Benton's Linear/Non-Linear Logic by removing the existence of the exchange structural rule. One should view this logic as composed of two logics; one sitting to the left of the other. On the left, there is intuitionistic linear logic, and on the right is a mixed commutative/non-commutative formalization of the Lambek calculus. Then both of these logics are connected via a pair of monoidal adjoint functors. An exchange modality is then derivable within the logic using the adjunction between both sides. Thus, the adjoint functors allow one to pull the exchange structural rule from the left side to the right side. We then give a categorical model in terms of a monoidal adjunction, and then a concrete model in terms of dialectica Lambek spaces.},
-	pages = {43--89},
-	journaltitle = {Electron. Proc. Theor. Comput. Sci.},
-	author = {Jiang, Jiaming and Eades {III}, Harley and de Paiva, Valeria},
-	urldate = {2021-07-10},
-	date = {2019-04-15},
-	eprinttype = {arxiv},
-	eprint = {1904.06847},
-	note = {version: 1},
-	keywords = {Computer Science - Logic in Computer Science, Computer Science - Programming Languages, F.4.1, F.3.2},
-	annotation = {Comment: In Proceedings Linearity-{TLLA} 2018, {arXiv}:1904.06159},
-	file = {Jiang et al. - 2019 - On the Lambek Calculus with an Exchange Modality.pdf:/Users/wanchengsyuan/Zotero/storage/LZ6C6DFT/Jiang et al. - 2019 - On the Lambek Calculus with an Exchange Modality.pdf:application/pdf;arXiv.org Snapshot:/Users/wanchengsyuan/Zotero/storage/MXKZHCQ8/1904.html:text/html}
+@inproceedings{jiang:lambek:2019,
+  author    = {J. Jiang and
+               H. Eades III and
+               V. de Paiva},
+  editor    = {T. Ehrhard and
+               M. Fern{\'{a}}ndez and
+               V. de Paiva and
+               L. Tortora de Falco},
+  title     = {On the Lambek calculus with an exchange modality},
+  booktitle = {Proc. of Joint Int. Wksh. on Linearity {\&} Trends
+               in Linear Logic and Applications, Linearity-TLLA@FLoC 2018},
+  series    = {Electron. Proc. Theor. Comput. Sci.},
+  volume    = {292},
+  pages     = {43--89},
+  year      = {2018},
+  doi       = {10.4204/EPTCS.292.4}
 }
+
 
 @inproceedings{benton:mixed:1994,
 	title = {A Mixed Linear and Non-Linear Logic: Proofs, Terms and Models},
