link to Agda code

--- a/SMCC-draft.tex
+++ b/SMCC-draft.tex
@@ -158,7 +158,7 @@ developed normal forms for skew monoidal categories \cite{uustalu:sequent:2021} 
 %% Next section, we will see a focused sequent calculus system and its connection with original sequent calculus system.
 %% We will see that all derivations in a same equivalence class under proof conversion relation, they will correspond to a unique derivation in focused system.
 
-The equivalence between sequent calculus derivations, quotiented by the equivalence relation $\circeq$, and focused derivations, that we present in Section \ref{sec:focus}, has been formalized in the Agda proof assistant. The associated code is available at ...
+The equivalence between sequent calculus derivations, quotiented by the equivalence relation $\circeq$, and focused derivations, that we present in Section \ref{sec:focus}, has been formalized in the Agda proof assistant. The associated code is available at \url{https://github.com/niccoloveltri/code-skewmonclosed}.
 
 \section{A Sequent Calculus for Skew Non-Commutative \MILL}\label{sec2}
 In this section we introduce a sequent calculus for a skew variant of non-commutative multiplicative intuitionistic linear logic (\NMILL), that we call \SkNMILL.
