--- a/docRefs.bib
+++ b/docRefs.bib
@@ -1061,14 +1061,16 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 }
 
 
-@article{mellies:categorical:09,
+@incollection{mellies:categorical:09,
   title={Categorical semantics of linear logic},
-  author={Mellies, P.-A.},
-  journal={Panoramas et syntheses},
+  author={Melli{\`e}s, P.-A.},
+  booktitle = {Interctive Models of Computation and Program Behavior},
+  editors = "P.-L. Curien and H. Herbelin and J.-L. Krivine and P.-A. Melli{\`e}s",
+  series={Panoramas et syntheses},
   volume={27},
   pages={15--215},
   year={2009},
-  publisher={Citeseer}
+  publisher = "Soc.\ Math.\ de France"
 }
 
 @article{lambek:deductive:68,
